--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Mono");
 /* Sass variables */
 /* Rules */
 .error {
@@ -39,7 +40,7 @@ body {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  height: 100%;
+  min-height: 100%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -102,12 +103,8 @@ body {
 #data-wrapper {
   color: #f8a3a5;
   text-align: center;
-  width: 100%; }
-  #data-wrapper #current-location {
-    color: #f8a3a5;
-    font-size: 1.4em;
-    text-transform: uppercase;
-    margin-bottom: 40px; }
+  width: 100%;
+  margin: 20px auto; }
   #data-wrapper #temperature {
     display: inline-block;
     margin-top: 0px;
@@ -120,17 +117,18 @@ body {
     letter-spacing: -10px;
     text-align: center; }
   #data-wrapper #nowcast {
-    margin-top: 0px;
-    text-align: center;
     font-size: 1.2em;
-    text-transform: uppercase; }
+    font-family: "Roboto Mono", monospace;
+    text-align: center;
+    text-transform: uppercase;
+    margin: 20px auto; }
   #data-wrapper .subdata-2 {
-    margin-top: 0px;
-    margin-bottom: 0px;
+    font-family: "Roboto Mono", monospace;
     font-size: 1.2em;
     font-weight: 400;
     text-align: center;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    margin: 20px auto; }
   #data-wrapper .underline {
     border-bottom: 4px solid #e54142; }
 
