--- a/src/App.css
+++ b/src/App.css
@@ -83,9 +83,12 @@ body {
 
 #title {
   color: #f8a3a5;
-  font-size: 36px;
+  font-size: 2.5em;
   text-align: center;
   border-bottom: 6px solid #e54142; }
+  @media (max-width: 425px) {
+    #title {
+      font-size: 1.8em; } }
 
 #loader {
   color: #f8a3a5;
