--- a/src/App.scss
+++ b/src/App.scss
@@ -118,9 +118,13 @@ body {
 
 #title {
   color: $primaryColorLighter;
-  font-size: 36px;
+  font-size: 2.5em;
   text-align: center;
   border-bottom: 6px solid $primaryColorDarker;
+
+  @media (max-width: 425px) {
+    font-size: 1.8em;
+  }
 }
 
 #loader {
